test/expected/explain_fvx_v.out
explain void f(void x)
               ^
16: error: named parameters can not be void
